--- a/pydarn/logging_config.yaml
+++ b/pydarn/logging_config.yaml
@@ -1,15 +1,28 @@
+# Copyright 2018 SuperDARN
+#
+# logging_config.yaml 
+# 2018-11-05
+# Configuration for pydarn's logging.
+
+# author: 
+# Marina Schmidt 
+
+# version number needs to be 1, cannot start at 0 
 version: 1
 formatters:
+    # This print the following format: 2018-11-05 15:39:49,678 pydarn: 
     pydarn_fmt:
         format: '%(asctime)s %(name)s: %(message)s'
     pydarn_error_fmt:
         format: '%(asctime)s %(name)s: ERROR %(message)s'
 handlers:
+    # used for testing purposes. 
     console:
         class: logging.StreamHandler
         level: DEBUG
         formatter: pydarn_fmt
         stream: ext://sys.stdout 
+    # should always be used in the code 
     info_file_handler:
         class: logging.handlers.RotatingFileHandler
         level: INFO
@@ -18,6 +31,7 @@ handlers:
         maxBytes: 10485760 
         backupCount: 20
         encoding: utf8
+    # use with exceptions and other potential errors
     error_file_handler:
         class: logging.handlers.RotatingFileHandler
         level: ERROR
@@ -27,15 +41,19 @@ handlers:
         backupCount: 20
         encoding: utf8
 loggers:
+    # defualt logger code should use. 
     pydarn:
         level: INFO
         handlers: [info_file_handler, error_file_handler]
         propagate: yes
+    # logger of choice for testing. 
     pydarn_debug:
         level: DEBUG
         handlers: [console, info_file_handler, error_file_handler]
         propagate: no
-
+    # needs to be specified, requirement of the logging library. 
+    # DO NOT USE! Libraries should not use the root as this will 
+    # ruin the users logger (if they use one)
     root:
         level: INFO
         handlers: [console]
