Pydarn logging comments
Added comments and licensing for pydarns logging.
Included the dmap testing, it fail currently but show the test case
of how pydarn produces log files for info and errors.


Former-commit-id: 32637db3068f26a72ab017be251746dcb0f95930

--- a/pydarn/logging_config.yaml
+++ b/pydarn/logging_config.yaml
@@ -23,8 +23,8 @@ formatters:
 # handlers are used a way to set levels, formats, and classes for the logger.
 handlers:
     # used for testing purposes. 
-    console: 
-        class: logging.StreamHandler # logger class that streams log messages
+    console:
+        class: logging.StreamHandler
         level: DEBUG
         formatter: pydarn_fmt
         stream: ext://sys.stdout 
