Forgot to change the repository url to pydarn's url
Former-commit-id: e7eb05d794a12acfd1b1846891c96c2ce46151c5

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: RST Documentation
-repo_url: https://github.com/superdarn/rst
+repo_url: https://github.com/superdarn/pydarn
 theme: readthedocs
 nav:
 - Home: index.md
