changed the mkdocs and favicon image to try and get it to work on read the docs, no success.
Former-commit-id: 5f5d065910ca75633a75861d68134adab6406361

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: RST Documentation
+site_name: PyDARN Documentation
 repo_url: https://github.com/superdarn/pydarn
 theme: readthedocs
 nav:
