refactored table of contents for pydarn
Former-commit-id: ab854ecd4207eb02e8304bbcf08cae77abe2a78d

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,4 +4,29 @@ theme: readthedocs
 nav:
 - Home: index.md
 - About: about.md
-
+- Installation:
+    - Linux: install.md
+    - MacOSx: install_mac.md
+    - Windows: install_windows.md 
+- HOWTO's:
+    - Read/Write DMAP: dmap.md
+    - Read/Write SuperDARN: darn.md
+    - Range-Time plots: range_time.md
+    - Time-Series plots: time_series.md
+    - Summary plots: summary.md
+- Code Documentation:
+    - ReadDmap: ReadDmap.md
+    - WriteDmap: WriteDmap.md
+    - ReadDarn: ReadDarn.md
+    - WriteDarn: WriteDarn.md 
+    - plot_range_time: plot_range_time.md
+    - plot_time_series: plot_time_series.md
+    - plot_summary: plot_summary.md
+- Developer Guide:
+    - Style: style_guide.md
+    - Structure: structure_guide.md 
+    - Documentation style: documentation_guide.md
+    - Testing: testing_guide.md
+    - Committing Code: committing_guide.md
+    - Release: release_guide.md 
+- History:
