adjusting home page to include general rulse of the road
Former-commit-id: b6559089b85970d48e56a8891bddf117c3c9e3b7

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,3 +24,5 @@ nav:
             - Range-Time plots: user/range_time.md 
             - Time-Series plots: user/time_series.md 
             - Summary plots: user/summary.md
+    - Developer Guide:
+        - Rules of the Road: developer/general.md
