--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,10 @@ matrix:
       - choco install python3
       - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
 
-install:
-    - pip3 install -U pip
-    - pip3 install .
-    - pip3 install codecov
+#install:
+#    - pip3 install -U pip
+#    - pip3 install .
+#    - pip3 install codecov
 # script: pytest 
 # adter_success:
 #   - codecov 
