--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,6 @@ install:
     - pip3 install -U pip
     - pip3 install .
 #    - pip3 install codecov
-# script: pytest 
+script: pytest 
 # adter_success:
 #   - codecov 
