--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
 install:
     - pip3 install -U pip
     - pip3 install .
-#    - pip3 install codecov
-#script: pytest 
+    - pip3 install codecov
+script: python3 -m pytest --ignore=test/performance --ignore=trst/integration 
 # adter_success:
 #   - codecov 
