--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
 install:
     - pip3 install -U pip
     - pip3 install .
-    - pip3 install codecov flake8 mypy
+    - pip3 install codecov flake8 mypy pytest
 script: pytest --ignore=test/performance --ignore=test/integration 
 # adter_success:
 #   - codecov 
