--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ matrix:
     include:
     - os: linux
       dist: trusty
-      name: ubuntu 14.04 
+      name: ubuntu 14.04
+      python: 3.6
     - os: linux
       dist: xenial
       name: ubuntu 16.04
