--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ matrix:
       python: 3.7
       before_install:
           pip3 install -U pip
+          pip3 install flake8 mypy
       script: 
       - flake8
       - mypy . 
