--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,12 @@ matrix:
           - pip3 install -U pip
     - name: Windows
       os: windows
-      language: minimal
+      language: shell
       before_install:
           - choco install python3
-          - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
+          - python3 -m pip install -U pip
+      env: export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
+          
 
 install:
     - pip3 install .
