--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ matrix:
           pip3 install -U pip
           pip3 install flake8 mypy
       script: 
-      - flake8
+      - flake8 --ignore=E01
       - mypy . 
     - name: MacOS
       os: osx
