--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ matrix:
       os: linux
       python: 3.7
       before_install:
-          pip3 install -U pip
-          pip3 install flake8 mypy
+          - pip3 install -U pip
+          - pip3 install flake8 mypy
       script: 
       - flake8 --ignore=ES01
       - mypy . 
