updating travis on permission issues with mac OS install

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,6 @@ matrix:
           
 
 install:
-    - pip3 install .
+    - pip3 install --user .
     - pip3 install pytest
 script: pytest --ignore=test/performance --ignore=test/integration 
