added logging to the table of contents

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,3 +24,4 @@ nav:
             - Range-Time plots: user/range_time.md 
             - Time-Series plots: user/time_series.md 
             - Summary plots: user/summary.md
+        - Logging: user/logging.md 
