--- a/.travis.yml
+++ b/.travis.yml
@@ -36,15 +36,21 @@ matrix:
       language: minimal
       before_install:
           - pip3 install -U pip
+          - git submodule update --init --recursive
+          - git submodule update --recusive --remote 
     - name: Windows
       os: windows
       language: shell
       before_install:
           - choco install python3 --version 3.7.0
           - python -m pip install --upgrade pip
+          - git submodule update --init --recursive
+          - git submodule update --recusive --remote 
       env: export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
           
-
+before_install:
+    - git submodule update --init --recursive
+    - git submodule update --recusive --remote 
 install:
     - pip3 install .
     - pip3 install pytest
