--- a/.travis.yml
+++ b/.travis.yml
@@ -16,28 +16,22 @@ matrix:
     - os: linux
       dist: xenial
       name: ubuntu 16.04
-      before_install:
-          - pip3 install -U pip
     - name: ubuntu 18.04 
       os: linux
       dist: bionic
-      before_install:
-          - pip3 install -U pip
     - name: PEP8 
       os: linux
       python: 3.7
       before_install:
           - pip3 install -U pip
           - pip3 install flake8 mypy
+          - git submodule update --init --recursive
+          - git submodule update --recursive --remote 
       script: 
       - flake8 --exit-zero --ignore=E501,F401
     - name: MacOS
       os: osx
       language: minimal
-      before_install:
-          - pip3 install -U pip
-          - git submodule update --init --recursive
-          - git submodule update --recusive --remote 
     - name: Windows
       os: windows
       language: shell
@@ -45,10 +39,11 @@ matrix:
           - choco install python3 --version 3.7.0
           - python -m pip install --upgrade pip
           - git submodule update --init --recursive
-          - git submodule update --recusive --remote 
+          - git submodule update --recursive --remote 
       env: export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
           
 before_install:
+    - pip3 install -U pip
     - git submodule update --init --recursive
     - git submodule update --recursive --remote 
 install:
