--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ matrix:
       before_install:
           - choco install python3 --version 3.7.0
           - python3 -m pip install --upgrade pip
+          - pip3 install --upgrade certifi
       env: export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
           
 before_install:
