--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ matrix:
       language: shell
       before_install:
           - choco install python3 --version 3.7.0
-          - python3 -m pip install --upgrade pip
+          - python -m pip install --upgrade pip
           - pip3 install --upgrade certifi
       env: export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
           
