--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ matrix:
       before_install:
           - choco install python3 --version 3.7.0
           - python -m pip install --upgrade pip
+          - pip3 install --upgrade certifi
       env: export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
           
 
