--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ matrix:
           
 before_install:
     - pip3 install -U pip
+    - pip3 install -U numpy
     - git submodule update --init --recursive
     - git submodule update --recursive --remote
 install:
