--- a/.travis.yml
+++ b/.travis.yml
@@ -49,4 +49,5 @@ before_install:
 install:
     - pip3 install .
     - pip3 install pytest
+    - pip3 install pydarnio
 script: pytest --ignore=test/integration 
