installing then updating
installing then updating the flake8

--- a/.github/workflows/flake8PR.yml
+++ b/.github/workflows/flake8PR.yml
@@ -12,6 +12,7 @@ jobs:
       uses: rbialon/flake8-annotations@v1
     - name: Lint with flake8
       run: |
+        pip3 install flake8
         pip3 install --upgrade flake8
         # stop the build if there are Python syntax errors or undefined names
         flake8 --exit-zero
