--- a/.github/workflows/flake8PR.yml
+++ b/.github/workflows/flake8PR.yml
@@ -17,8 +17,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8
-    - name: Setup flake8 annotations
-      uses: rbialon/flake8-annotations@v1
+    - name: Flake8 action
+      uses: suo/flake8-github-action@v1
     - name: Lint with flake8
       run: |
         pip3 install flake8
