updated documentation for power plotting

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,4 +18,5 @@ nav:
             - Range-Time plots: user/range_time.md 
             - Time-Series plots: user/time_series.md 
             - Summary plots: user/summary.md
+            - Power plots: user/power.md
         - Logging: user/logging.md 
