added testing pull requests documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,4 +18,6 @@ nav:
             - Range-Time plots: user/range_time.md 
             - Time-Series plots: user/time_series.md 
             - Summary plots: user/summary.md
-        - Logging: user/logging.md 
+        - Logging: user/logging.md
+    - pyDARN Team:
+        - Testing Pull Requests: dev/testing.md
