--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
     - Citing: user/citing.md
     - Tutorials:
         - Radar and Hardware Information: user/hardware.md 
+        - Reading Files: user/io.md
         - Plotting:
             - Range-Time plots: user/range_time.md 
             - Time-Series plots: user/time_series.md 
