--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,4 +21,6 @@ nav:
             - Summary plots: user/summary.md
         - Logging: user/logging.md
     - pyDARN Team:
-        - Testing Pull Requests: dev/testing.md
+        - Pull Requests:
+            - Testing: dev/testing.md
+            - Creating and Guidelines: dev/PR.md
