--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,5 +22,7 @@ nav:
             - ACF plots: user/acf.md
         - Logging: user/logging.md
     - pyDARN Team:
-        - Testing Pull Requests: dev/testing.md
+        - Pull Requests:
+            - Testing: dev/testing.md
+            - Code Reviews: dev/code_review.md
 
