--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
             - Range-Time plots: user/range_time.md 
             - Time-Series plots: user/time_series.md 
             - Summary plots: user/summary.md
+            - Fan plots: user/fan.md
             - Power plots: user/power.md
             - ACF plots: user/acf.md
             - Logging: user/logging.md
