add release guidelines to table of contents

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,3 +30,4 @@ nav:
                 - Pull Requests: dev/PR.md 
                 - Testing: dev/testing.md
                 - Code Reviews: dev/code_review.md
+        - Release Guidelines: dev/releases.md
