--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,10 +21,9 @@ nav:
             - Power plots: user/power.md
             - ACF plots: user/acf.md
             - Logging: user/logging.md
-
     - pyDARN Team: dev/team.md
-        - Communication Guidelines: dev/communication.md 
-        - Pull Requests: 
+    - Communication: dev/communication.md 
+    - Pull Requests: 
             - Creating and Guidelines: dev/PR.md
             - Testing: dev/testing.md
             - Code Reviews: dev/code_review.md
