--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
             - Range-Time plots: user/range_time.md 
             - Time-Series plots: user/time_series.md 
             - Summary plots: user/summary.md
+            - FOV plots: user/fov.md
             - Fan plots: user/fan.md
             - Power plots: user/power.md
             - ACF plots: user/acf.md
