updated the structure to allow it be called from travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,4 +50,4 @@ install:
     - pip3 install .
     - pip3 install pytest
     - pip3 install pydarnio
-script: pytest --ignore=test/integration 
+script: pytest --ignore=test/data
