added pytest doc to the index and mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
                 - Projects: dev/projects.md
                 - Issues: dev/issues.md
                 - Branches: dev/branching.md
+                - Unit Testing: dev/pytest.md
                 - Pull Requests: dev/PR.md 
                 - Testing: dev/testing.md
                 - Code Reviews: dev/code_review.md
