--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,13 +12,13 @@ nav:
     - SuperDARN Data Access: user/superdarn_data.md 
     - Citing: user/citing.md
     - Tutorials:
-            - Radar and Hardware Information: user/hardware.md 
-            - Coordinates: user/coordinates.md
             - Reading Files: user/io.md
+            - Radar and Hardware Information: user/hardware.md 
+            - Axes Setup: user/axis.md
+            - Ranges, Coords and Projs: user/coordinates.md
             - Range-Time plots: user/range_time.md 
             - Time-Series plots: user/time_series.md 
             - Summary plots: user/summary.md
-            - Axis: user/axis.md
             - FOV plots: user/fov.md
             - Fan plots: user/fan.md
             - Grid plots: user/grid.md
