--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ nav:
     - Workflow:
                 - Issues: dev/issues.md
                 - Branches: dev/branching.md
+                - Developing: dev/developing.md
                 - Unit Testing: dev/pytest.md
                 - Pull Requests: dev/PR.md 
                 - Testing: dev/testing.md
