--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
     matplotlib>=3.7.0
     aacgmv2
     pydarnio>=1.1.0
+    cartopy>=0.22.0
 
 [options.packages.find]
 exclude =
