--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ install_requires =
     matplotlib>=3.7.0
     aacgmv2
     pydarnio>=1.3.0
-    scipy
+    scipy<1.15.0
     cartopy>=0.22.0
 
 [options.packages.find]
