Updated pyDARNio installation branch

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ install_requires =
     numpy
     matplotlib>=3.7.0
     aacgmv2
-    pydarnio @ git+https://github.com/SuperDARN/pyDARNio.git@darn-dmap
+    pydarnio @ git+https://github.com/SuperDARN/pyDARNio.git@develop
     scipy<1.15.0
     cartopy>=0.22.0
 
