--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,8 @@
 # Include the README
 include *.md 
 
-# Include the licesnse file 
+# Include the license file 
 include LICENSE
-
-# Include data files (metadata for pydarn package)
-include pydarn/logging_config.yaml
 
 # Include hardware files
 include pydarn/utils/hdw/*
